crates/server-less/tests/fixtures/param_wrong_type_str.stderr
error: expected string literal
 --> tests/fixtures/param_wrong_type_str.rs:8:39
  |
8 |     pub fn hello(&self, #[param(env = 42)] name: String) -> String {
  |                                       ^^
