crates/server-less/tests/fixtures/param_wrong_type_str.rs
use server_less::http;

struct MyService;

// Passing an integer where #[param(env)] expects a string should produce a clear error.
#[http]
impl MyService {
    pub fn hello(&self, #[param(env = 42)] name: String) -> String {
        name
    }
}

fn main() {}
